tests/purs/failing/PolykindInstantiatedInstance.out
Error found:
in module [33mMain[0m
at tests/purs/failing/PolykindInstantiatedInstance.purs:12:26 - 12:42 (line 12, column 26 - line 12, column 42)

  Could not match kind
  [33m        [0m
  [33m  Symbol[0m
  [33m        [0m
  with kind
  [33m      [0m
  [33m  Type[0m
  [33m      [0m

while trying to match type [33m"foo"[0m
  with type [33mt1[0m
while checking that expression [33mProxy[0m
  has type [33mt0 t1[0m
in value declaration [33mtest1[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/KindsDoNotUnify.md for more information,
or to contribute content related to this error.

